// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButton /> Snapshot should match snapshot 1`] = `
<DocumentFragment>
  .ActionButton-module__action___kJcys {
  border: 2px solid transparent;
  border-radius: 4px;
  color: var(--qtm-colors-primary-700);
  cursor: pointer;
  font-weight: 400;
  margin: 0 var(--qtm-spacing-xxsmall);
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  text-align: center;
  text-decoration: none;
  transition: color .2s ease-in-out,background-color .2s ease-in-out,border .2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  white-space: nowrap;
}

<a
    class="ActionButton-module__action___kJcys"
  >
    Back
  </a>
</DocumentFragment>
`;

exports[`<ActionButton /> Snapshot should match snapshot with aria-disabled prop 1`] = `
<DocumentFragment>
  .ActionButton-module__action___kJcys {
  border: 2px solid transparent;
  border-radius: 4px;
  color: var(--qtm-colors-primary-700);
  cursor: pointer;
  font-weight: 400;
  margin: 0 var(--qtm-spacing-xxsmall);
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  text-align: center;
  text-decoration: none;
  transition: color .2s ease-in-out,background-color .2s ease-in-out,border .2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  white-space: nowrap;
}

<a
    aria-disabled="true"
    class="ActionButton-module__action___kJcys"
  >
    Next
  </a>
</DocumentFragment>
`;
